Created test.js file and linked it with index.html file

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         <p>Some text</p>
     </div>
 
-    <script>
-        alert("Hello, World!");
-    </script>
+    <script src="test.js"></script>
 </body>
 
 </html>
