--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-    
-    <h1>JS for Beginners</h1>
-    <div id="content">
-        <p>Some text</p>
-    </div>
+
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+    <a href="#">Link 4</a>
+    <a href="#">Link 5</a>
+    <a href="#">Link 6</a>
 
     <script src="test.js"></script>
 </body>
