Created style.css file; Changed the content in index.html and test.js; Used onClick Event;

--- a/index.html
+++ b/index.html
@@ -6,18 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript for Beginners</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
 
-    <a href="#">Link 0</a>
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-    <a href="#">Link 4</a>
-    <a href="#">Link 5</a>
+    <div id="content">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed consequuntur eaque, iure tempore ab provident
+            dolor accusamus. Expedita unde reiciendis veritatis architecto porro aperiam, sint ut. Dolores cum beatae
+            nihil?</p>
+        <p>Some text created only for test to chech if the website works</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A explicabo unde non debitis veritatis praesentium
+            aliquid odit ipsa excepturi quia earum amet, voluptatum nostrum, ipsam dolor consectetur ipsum! Doloribus,
+            quibusdam.</p>
+
+
+    </div>
+    
+    <a id="show-more">Show More</a>
 
     <script src="test.js"></script>
+
 </body>
 
 </html>
