--- a/index.html
+++ b/index.html
@@ -7,25 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript for Beginners</title>
     <link href="style.css" type="text/css" rel="stylesheet">
-    
-    <script src="test.js"></script>
-
 </head>
 
 <body>
 
-    <div id="content">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed consequuntur eaque, iure tempore ab provident
-            dolor accusamus. Expedita unde reiciendis veritatis architecto porro aperiam, sint ut. Dolores cum beatae
-            nihil?</p>
-        <p>Some text created only for test to chech if the website works</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A explicabo unde non debitis veritatis praesentium
-            aliquid odit ipsa excepturi quia earum amet, voluptatum nostrum, ipsam dolor consectetur ipsum! Doloribus,
-            quibusdam.</p>
+    <div id="message">
+        <p>THIS IS IMPORTANT NOTIFICATION</p>
+        <p>Some text</p>
 
     </div>
-    
-    <a id="show-more">Show More</a>
+
+    <div id="colour-changer"></div>
+
+    <script src="test.js"></script>
 
 </body>
 
