--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,15 +12,25 @@
 
 <body>
 
-    <div id="message">
-        <p>THIS IS IMPORTANT NOTIFICATION</p>
-        <p>Some text</p>
+	<form id="my-form" name="myForm" action="#">
+		<label for="name">Name:</label>
+		<input type="text" name="name"><br/>
+		<label>Hobbies:</label><br/>
+		<input type="checkbox" name="biking" value="biking">Biking<br/>
+		<input type="checkbox" name="skiing" value="skiing">Skiing<br/>
+  		<input type="checkbox" name="diving" value="diving">Diving<br/>
+		<label for="colour">Fav colour</label>
+		<select name="colour">
+			<option>Red</option>
+			<option>Blue</option>
+			<option>B=Green</option>
+		</select>
+		<input type="submit" name="submit" value="Submit">
+	</form>
 
-    </div>
-
-    <div id="colour-changer"></div>
-
-    <script src="test.js"></script>
+    <div id="message" style="color: red;"></div>
+    
+	<script src="test.js"></script>
 
 </body>
 
