Change content in index.html but it doesnt work

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,24 +11,20 @@
 
 <body>
 
-	<form id="my-form" name="myForm" action="#">
-		<label for="name">Name:</label>
-		<input type="text" name="name"><br/>
-		<label>Hobbies:</label><br/>
-		<input type="checkbox" name="biking" value="biking">Biking<br/>
-		<input type="checkbox" name="skiing" value="skiing">Skiing<br/>
-  		<input type="checkbox" name="diving" value="diving">Diving<br/>
-		<label for="colour">Fav colour</label>
-		<select name="colour">
-			<option>Red</option>
-			<option>Blue</option>
-			<option>B=Green</option>
-		</select>
-		<input type="submit" name="submit" value="Submit">
-	</form>
+	<div id="content">
+        <p>bla bla bla</p>
+        <p>bla bla bla</p>
+        <p>bla bla bla</p>
+        <p>bla bla bla</p>
+        <p>bla bla bla</p>
+        <p>grab me</p>
+    </div>
 
-    <div id="message" style="color: red;"></div>
-    
+    <script
+			  src="https://code.jquery.com/jquery-1.12.4.min.js"
+			  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+			  crossorigin="anonymous"></script>
+
 	<script src="test.js"></script>
 
 </body>
